clusters/proxmox-home/security/falco/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: falco
  labels:
    app.kubernetes.io/name: falco
    app.kubernetes.io/component: namespace
